# ComputerGraphics

./: .project  CMakeLists.txt  README.md
Ue2/cg_solar/: README.md
Ue2/cg_solar/doc/: classEarth-members.html  classEarth.html  classPlanet-members.html  classPlanet.html  classSolar__viewer-members.html  classSolar__viewer.html  classTexture.html  functions.html  functions_func.html  functions_vars.html  index.html  planet_8h_source.html  saturn__rings_8h_source.html  solar__viewer_8h_source.html  texture_8cpp.html  texture_8cpp__incl.dot  texture_8cpp__incl.md5  texture_8h_source.html  todo.html
Ue2/cg_solar/doc/search/: all_13.js  all_4.js  all_c.js  all_f.js  functions_4.js  functions_9.js  functions_d.js  variables_a.js  variables_b.js
Ue2/cg_solar/src/: billboard.cpp  planet.h  ship.cpp  solar_viewer.cpp  solar_viewer.h  texture.cpp
Ue2/cg_solar/src/shader/: color.frag  earth.frag  earth.vert  phong.frag  phong.vert
Ue3/cg_bezier-subdiv/: CMakeLists.txt  Doxyfile.in  README.md
Ue3/cg_bezier-subdiv/doc/: BezierViewer_8cpp.html  BezierViewer_8cpp__incl.dot  BezierViewer_8cpp__incl.md5  BezierViewer_8h.html  BezierViewer_8h__dep__incl.dot  BezierViewer_8h__dep__incl.md5  BezierViewer_8h__incl.dot  BezierViewer_8h__incl.md5  BezierViewer_8h_source.html  Main__Bezier_8cpp.html  Main__Bezier_8cpp__incl.dot  Main__Bezier_8cpp__incl.md5  Main__Subdivision_8cpp.html  Main__Subdivision_8cpp__incl.dot  Main__Subdivision_8cpp__incl.md5  Mesh_8cpp.html  Mesh_8cpp__incl.dot  Mesh_8cpp__incl.md5  Mesh_8h.html  Mesh_8h__dep__incl.dot  Mesh_8h__dep__incl.md5  Mesh_8h__incl.dot  Mesh_8h__incl.md5  Mesh_8h_source.html  README_8md.html  Subdivision__Viewer_8cpp.html  Subdivision__Viewer_8cpp__incl.dot  Subdivision__Viewer_8cpp__incl.md5  Subdivision__Viewer_8h.html  Subdivision__Viewer_8h__dep__incl.dot  Subdivision__Viewer_8h__dep__incl.md5  Subdivision__Viewer_8h__incl.dot  Subdivision__Viewer_8h__incl.md5  Subdivision__Viewer_8h_source.html  annotated.html  bezier__patch_8cpp.html  bezier__patch_8cpp__incl.dot  bezier__patch_8cpp__incl.md5  bezier__patch_8h.html  bezier__patch_8h__dep__incl.dot  (+56 more)
Ue3/cg_bezier-subdiv/doc/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_6.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  defines_0.js  enumvalues_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_d.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js
Ue3/cg_bezier-subdiv/models/: heart.bez  teacup.off  teapot.bez  teapot.off
Ue3/cg_bezier-subdiv/src/bezier/: BezierViewer.cpp  BezierViewer.h  CMakeLists.txt  Main_Bezier.cpp  bezier_patch.cpp  bezier_patch.h  bezier_surface.cpp  bezier_surface.h
Ue3/cg_bezier-subdiv/src/subdivision/: CMakeLists.txt  Main_Subdivision.cpp  Mesh.cpp  Mesh.h  Subdivision_Viewer.cpp  Subdivision_Viewer.h
Ue3/cg_fourier/: CMakeLists.txt  Doxyfile.in  README.md
Ue3/cg_fourier/data/: SOURCES.md
Ue3/cg_fourier/documentation/: README_8md.html  annotated.html  classSignal2D-members.html  classSignal2D.html  classSpectrum2D-members.html  classSpectrum2D.html  classes.html  dir_0d240bb5079f2206a71ced7561216b98.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_85039e0a4807a1c8e1916b08b60a1095.html  files.html  filter_8cpp.html  filter_8cpp__incl.dot  filter_8cpp__incl.md5  fourier1D_8cpp.html  fourier1D_8cpp__incl.dot  fourier1D_8cpp__incl.md5  fourier_8cpp.html  fourier_8cpp__incl.dot  fourier_8cpp__incl.md5  fourier_8h.html  fourier_8h__dep__incl.dot  fourier_8h__dep__incl.md5  fourier_8h__incl.dot  fourier_8h__incl.md5  fourier_8h_source.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  graph_legend.html  hybrid_8cpp.html  hybrid_8cpp__incl.dot  hybrid_8cpp__incl.md5  image_8cpp.html  image_8cpp__incl.dot  image_8cpp__incl.md5  image_8h.html  (+8 more)
Ue3/cg_fourier/documentation/search/: all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  classes_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+10 more)
Ue3/cg_fourier/lib/: CMakeLists.txt
Ue3/cg_fourier/src/: CMakeLists.txt
doc/: Camera_8h.html  Camera_8h__dep__incl.dot  Camera_8h__dep__incl.md5  Camera_8h__incl.dot  Camera_8h__incl.md5  Camera_8h_source.html  Image_8h.html  Image_8h__dep__incl.dot  Image_8h__dep__incl.md5  Image_8h__incl.dot  Image_8h__incl.md5  Image_8h_source.html  Light_8h.html  Light_8h__dep__incl.dot  Light_8h__dep__incl.md5  Light_8h__incl.dot  Light_8h__incl.md5  Light_8h_source.html  Material_8h.html  Material_8h__dep__incl.dot  Material_8h__dep__incl.md5  Material_8h__incl.dot  Material_8h__incl.md5  Material_8h_source.html  Mesh_8cpp.html  Mesh_8cpp__incl.dot  Mesh_8cpp__incl.md5  Mesh_8h.html  Mesh_8h__dep__incl.dot  Mesh_8h__dep__incl.md5  Mesh_8h__incl.dot  Mesh_8h__incl.md5  Mesh_8h_source.html  Object_8h.html  Object_8h__dep__incl.dot  Object_8h__dep__incl.md5  Object_8h__incl.dot  Object_8h__incl.md5  Object_8h_source.html  Plane_8cpp.html  (+122 more)
doc/search/: all_1.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_7.js  defines_0.js  files_7.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_e.js  searchdata.js  variables_0.js  variables_10.js  variables_11.js  variables_2.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  (+4 more)
lib/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/lodePNG/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  Camera.h  Image.h  Makefile  Material.h  Mesh.cpp  Mesh.h  Object.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  raytrace.cpp  vec3.h
(+9 files in other folders)
